# recount-app

./: .gitignore  .mcp.json  .oxfmtrc.jsonc  .oxlintrc.json  AGENTS.md  CONTEXT-MAP.md  CONTEXT.md  Caddyfile  alchemy.run.ts  bunfig.toml  lefthook.yml  opencode.jsonc  oxfmt.config.ts  oxlint.config.ts  package.json  sgconfig.yml  skills-lock.json  turbo.json
.better-agents/effect/: .oxlintrc.json  LLMS.md  jsdocs.config.json  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.shared.ts
.zed/: settings.json
apps/backend/: package.json
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/: .gitignore  README.md
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/resources/: .gitignore
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: ai.rs
apps/desktop/src-tauri/src/commands/ai/: inference.rs
apps/desktop/src-tauri/src/commands/platform/: macos.rs
apps/desktop/src-tauri/src/commands/platform/macos/: idle_time.rs  window_info.rs
apps/electric-proxy/: package.json  tsconfig.json
apps/landing/: alchemy.run.ts  astro.config.ts  oxlint.config.ts  package.json  tsconfig.json
apps/web/: alchemy.ts  package.json  tsconfig.json  vite.config.ts
docs/: model-boundaries.md  optimistic-archive-delete-target.md
docs/adr/: 0001-tracked-time-target-read-seam.md  0002-production-code-and-tests-live-separately.md  0003-effect-service-and-error-tags.md
docs/agents/: domain.md  issue-tracker.md
interface/: oxlint.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
interface/notes/: calendar.md
interface/src/: app.tsx  exports.ts  (+6 more)
messages/: en.json
scripts/: clean.ts
(+438 files in other folders)
